canvis millora swagger
